Update Vuln Navbar

--- a/app/templates/baseof.html
+++ b/app/templates/baseof.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>VulnTracker</title>
+    <title>VulnIntelTracker</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body class="bg-dark text-white">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary px-3 " data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index.Index') }}">VulnTracker</a>
+            <a class="navbar-brand" href="{{ url_for('index.Index') }}">VulnIntelTracker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -24,13 +25,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-4">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ url_for('index.Index') }}">Home</a>
+                        <a class="nav-link {{ 'active' if active_page == 'Index' else '' }}" aria-current="page"
+                            href="{{ url_for('index.Index') }}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('vuln.Vuln') }}">Vuln List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('vuln.VulnAdd') }}">Vuln Add</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle {{ 'active' if active_page == 'VulnAdd' or active_page == 'VulnList' else '' }}"
+                            href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Vulnerability
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="nav-item">
+                                <a class="dropdown-item {{ 'active' if active_page == 'VulnList' else '' }}"
+                                    href="{{ url_for('vuln.VulnList') }}">List Vulnerability</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="dropdown-item {{ 'active' if active_page == 'VulnAdd' else '' }}"
+                                    href="{{ url_for('vuln.VulnAdd') }}">Add Vulnerability</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
