Password Change Added

--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,11 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Profile</h1>
+<h1 class="text-center mb-4">Profile</h1>
 
 <p>Username: {{ user.username }}</p>
-{% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
+{% if user.last_seen %}
+<p>Last seen on: {{ user.last_seen }}</p>
+{% endif %}
+<p>Member since: {{ user.member_since }}</p>
 
 
+{% if user.last_password_change %}
+<p>Last password change: {{ user.last_password_change }}</p>
+{% endif %}
+
+
+{% include 'user/password_change.html' %}
 
 {% endblock %}
