--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -2,21 +2,33 @@
 {% block content %}
 
 <h1 class="text-center mb-4">Login</h1>
-<form action="" method="post" novalidate>
+<form action="{{ url_for('login') }}" method="post" novalidate>
     {{ form.hidden_tag() }}
     <div class="form-group mb-3">
         {{ form.username.label(class_="form-label") }}<br>
-        {{ form.username(class_="form-control", size=32) }}
+        {% if form.username.errors %}
+        {{ form.username(class_="form-control is-invalid", size=32) }}
         {% for error in form.username.errors %}
-        <span style="color: red;">{{ error }}</span>
+        <div class="invalid-feedback">
+            <span style="color: red;">{{ error }}</span>
+        </div>
         {% endfor %}
+        {% else %}
+        {{ form.username(class_="form-control", size=32) }}
+        {% endif %}
     </div>
     <div class="form-group mb-3">
         {{ form.password.label(class_="form-label") }}<br>
+        {% if form.password.errors %}
+        {{ form.password(class_="form-control is-invalid", size=32) }}
+        <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        {% else %}
         {{ form.password(class_="form-control", size=32) }}
-        {% for error in form.password.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
+        {% endif %}
     </div>
     <div class="form-group mb-3 form-check">
         {{ form.remember_me(class_="form-check-input") }} {{
