--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -2,35 +2,59 @@
 {% block content %}
 
 <h1 class="text-center mb-4">Create Account</h1>
-<form action="" method="post">
+<form action="{{ url_for('register') }}" method="post">
     {{ form.hidden_tag() }}
     <div class="form-group mb-3">
         {{ form.username.label(class_="form-label") }}<br>
+        {% if form.username.errors %}
+        {{ form.username(class_="form-control is-invalid", size=32) }}
+        <div class="invalid-feedback">
+            {% for error in form.username.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        {% else %}
         {{ form.username(class_="form-control", size=32) }}
-        {% for error in form.username.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
+        {% endif %}
     </div>
     <div class="form-group mb-3">
         {{ form.email.label(class_="form-label") }}<br>
-        {{ form.email(class_="form-control", size=64) }}
-        {% for error in form.email.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
+        {% if form.email.errors %}
+        {{ form.email(class_="form-control is-invalid", size=32) }}
+        <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        {% else %}
+        {{ form.email(class_="form-control", size=32) }}
+        {% endif %}
     </div>
     <div class="form-group mb-3">
         {{ form.password.label(class_="form-label") }}<br>
+        {% if form.password.errors %}
+        {{ form.password(class_="form-control is-invalid", size=32) }}
+        <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        {% else %}
         {{ form.password(class_="form-control", size=32) }}
-        {% for error in form.password.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
+        {% endif %}
     </div>
     <div class="form-group mb-5">
         {{ form.password2.label(class_="form-label") }}<br>
+        {% if form.password2.errors %}
+        {{ form.password2(class_="form-control is-invalid", size=32) }}
+        <div class="invalid-feedback">
+            {% for error in form.password2.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        {% else %}
         {{ form.password2(class_="form-control", size=32) }}
-        {% for error in form.password2.errorsÂ %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
+        {% endif %}
     </div>
 
     <div class="form-group mb-3 mx-auto">{{ form.submit(class_="form-control btn btn-primary") }}</div>
