Vuln Add Modal Vers Added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,8 @@
         {% endblock %}
     </div>
 
+    {% include 'vulnerability/add_modal.html' %}
+
     {% include 'partials/footer.html' %}
     {% include 'partials/script.html' %}
 </body>
