--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -13,9 +13,26 @@
                     <a class="nav-link {{ 'active' if request.path == url_for('index') else '' }}" aria-current="page"
                         href="{{ url_for('index') }}">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link {{ 'active' if request.path == url_for('vulnerability_add') else '' }}"
-                        aria-current="page" href="{{ url_for('vulnerability_add') }}">Vulnerability Add</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle {{ 'active' if request.path == url_for('vulnerability_add') or request.path == url_for('vulnerability_list') else '' }}"
+                        href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Vulnerability
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="nav-item">
+                            <a class="dropdown-item {{ 'active' if request.path == url_for('vulnerability_list') else '' }}"
+                                aria-current="page" href="{{ url_for('vulnerability_list') }}">List Vulnerability</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="dropdown-item" href="#addVulnModal" data-bs-toggle="modal"
+                                data-bs-target="#addVulnModal" aria-haspopup="true" aria-expanded="false">Add Modal
+                                Vulnerability</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="dropdown-item {{ 'active' if request.path == url_for('vulnerability_add') else '' }}"
+                                aria-current="page" href="{{ url_for('vulnerability_add') }}">Vulnerability Add</a>
+                        </li>
+                    </ul>
                 </li>
                 {% endif %}
             </ul>
@@ -41,7 +58,6 @@
                 </li>
                 {% endif %}
             </ul>
-
         </div>
     </div>
 </nav>
