--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -3,7 +3,7 @@
 
 <div class="col-md-4 mx-auto">
     <h1 class="text-center mb-4">Login</h1>
-    <form action="{{ url_for('login') }}" method="post" novalidate>
+    <form action="{{ url_for('user.login') }}" method="post" novalidate>
         {{ form.hidden_tag() }}
         <div class="form-group mb-3">
             {{ form.username.label(class_="form-label") }}<br>
@@ -38,7 +38,7 @@
 
         <div class="form-group mb-3 mx-auto">{{ form.submit(class_="form-control btn btn-primary") }}</div>
 
-        <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+        <p>New User? <a href="{{ url_for('user.register') }}">Click to Register!</a></p>
     </form>
 </div>
 
