--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -3,7 +3,7 @@
 
 <div class="col-md-4 mx-auto">
     <h1 class="text-center mb-4">Create Account</h1>
-    <form action="{{ url_for('register') }}" method="post">
+    <form action="{{ url_for('user.register') }}" method="post">
         {{ form.hidden_tag() }}
         <div class="form-group mb-3">
             {{ form.username.label(class_="form-label") }}<br>
