--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -2,6 +2,6 @@
 {% block content %}
 
 <h1 class="text-center mb-4">File Not Found</h1>
-<p><a href="{{ url_for('index') }}">Back</a></p>
+<p><a href="{{ url_for('main.index') }}">Back</a></p>
 
 {% endblock %}
