--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -3,6 +3,6 @@
 
 <h1 class="text-center mb-4">An unexpected error has occurred</h1>
 <p>The administrator has been notified. Sorry for the inconvenience!</p>
-<p><a href="{{ url_for('index') }}">Back</a></p>
+<p><a href="{{ url_for('main.index') }}">Back</a></p>
 
 {% endblock %}
