--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -26,7 +26,7 @@
                         <li class="nav-item">
                             <a class="dropdown-item {{ 'active' if request.path == url_for('vulnerability.vulnerability_add') else '' }}"
                                 aria-current="page"
-                                href="{{ url_for('vulnerability.vulnerability_add') }}">Vulnerability Add</a>
+                                href="{{ url_for('vulnerability.vulnerability_add') }}">Add Vulnerability</a>
                         </li>
                     </ul>
                 </li>
